# ZipScout

./: .gitignore  README.md
ZipScout/: CMakeLists.txt  FoundFilesModel.cpp  FoundFilesModel.h  WorkerManager.cpp  WorkerManager.h  ZipArchiveCreator.cpp  ZipArchiveCreator.h  ZipWordSearcher.cpp  ZipWordSearcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp
ZipScout/tests/: test_main.cpp
